--- a/index.html
+++ b/index.html
@@ -474,8 +474,25 @@
             </li>
           </ul>
         </div>
+        <div>
+          <h2 class="subscr">Subscribe</h2>
+          <div class="subscr-container">
+            <input
+              class="subscr-field"
+              type="text"
+              name="subscribe-field"
+              placeholder="E-mail"
+            />
+            <button class="btn-subscr" type="submit">
+              Subscribe<svg class="subscr-icon">
+                <use href="./images/icons.svg#icon-telegram"></use>
+              </svg>
+            </button>
+          </div>
+        </div>
       </div>
     </footer>
+    <!-- MODAL -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="btn-modal" data-modal-close>
@@ -483,6 +500,59 @@
             <use href="./images/icons.svg#icon-btn-close"></use>
           </svg>
         </button>
+        <div>
+          <p class="form-titel">
+            Leave your contacts and we will call you back
+          </p>
+          <form class="form">
+            <div class="form-field">
+              <label for="name" class="form-label">Name</label>
+              <input type="text" class="form-input" name="name" id="name" />
+              <svg class="icon">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+            <div class="form-field">
+              <label for="phone" class="form-label">Phone</label>
+              <input type="text" class="form-input" name="phone" id="phone" />
+              <svg class="icon">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+            <div class="form-field">
+              <label for="email" class="form-label">Email</label>
+              <input type="text" class="form-input" name="email" id="email" />
+              <svg class="icon">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+            <div class="Comment-field">
+              <label for="comment" class="form-label">Comment</label>
+              <textarea
+                name="comment"
+                class="form-comment"
+                id="comment"
+                placeholder="Text input"
+              ></textarea>
+            </div>
+            <input
+              class="checkbox visually-hidden"
+              type="checkbox"
+              name="checkbox"
+              id="check"
+            />
+            <label class="checkbox-wrap" for="check"
+              ><span class="custom-checkbox">
+                <svg class="custom-icon">
+                  <use href="./images/icons.svg#icon-vector"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a href="#" class="Privacy">Privacy Policy</a>
+            </label>
+            <button type="submit" class="btn-submit">Send</button>
+          </form>
+        </div>
       </div>
     </div>
     <script src="./js/modal.js"></script>
