--- a/portfolio.html
+++ b/portfolio.html
@@ -341,6 +341,22 @@
             </li>
           </ul>
         </div>
+        <div>
+          <h2 class="subscr">Subscribe</h2>
+          <div class="subscr-container">
+            <input
+              class="subscr-field"
+              type="text"
+              name="subscribe-field"
+              placeholder="E-mail"
+            />
+            <button class="btn-subscr" type="submit">
+              Subscribe<svg class="subscr-icon">
+                <use href="./images/icons.svg#icon-telegram"></use>
+              </svg>
+            </button>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
