--- a/portfolio.html
+++ b/portfolio.html
@@ -296,7 +296,7 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div>
+        <div class="footer-social-media">
           <p class="title-footer">Social media</p>
           <ul class="footer-social-list list">
             <li class="footer-social-item">
